cmake_minimum_required(VERSION 3.19)
project(C_Project C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Project main.c leetcode/main/59.c leetcode/main/erweishuzu.c cpp_learn/gouzao.cpp)
add_executable(quick leetcode/sortAlgorithm/quick.c)

add_executable(twoSum leetcode/leetcode/editor/cn/twoSum.c)
#add_executable([739]每日温度 leetcode/leetcode/editor/cn/[739]每日温度.c)
add_executable(erweishuzu leetcode/main/erweishuzu.c)
add_executable(453 leetcode/main/453.c)
add_executable(9 leetcode/main/9.c)
add_executable(13 leetcode/main/13.c)
add_executable(erwei runoob/erwei.c)
add_executable(shuzuzhizhen runoob/shuzuzhizhen.c)
add_executable(118 leetcode/main/118.c)
#add_executable(yanghui leetcode/main/yanghui.c)
add_executable(59 leetcode/main/59.c)
add_executable(2351 leetcode/main/2351.c)
add_executable(904 leetcode/main/904.c)
add_executable(76 leetcode/main/76.c)
add_executable(file1 xiaojiayu/wenjian/file1.c)
add_executable(cocktail leetcode/sortAlgorithm/cocktail.c)
add_executable(bubble leetcode/sortAlgorithm/bubble.c)
add_executable(atoi1 xiaojiayu/wendang/atoi1.c)
add_executable(calloc1 xiaojiayu/wendang/calloc1.c)
add_executable(clearerr1 xiaojiayu/wendang/clearerr1.c)
add_executable(exit1 xiaojiayu/wendang/exit1.c)
add_executable(fabs1 xiaojiayu/wendang/fabs1.c)
add_executable(fopen1 xiaojiayu/wendang/fopen1.c)
add_executable(getputc xiaojiayu/wendang/getputc.c)
add_executable(getsputs xiaojiayu/wendang/getsputs.c)
add_executable(fprintfscanf xiaojiayu/wendang/fprintfscanf.c)
add_executable(freadwrite xiaojiayu/wendang/freadwrite.c)
add_executable(assert1 xiaojiayu/assert1.c)
add_executable(feof1 xiaojiayu/wendang/feof1.c)
add_executable(stderr xiaojiayu/wendang/stderr.c)