cmake_minimum_required(VERSION 3.19)
project(cpp_learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_learn main.cpp 107.cpp )
add_executable(gouzao gouzao.cpp)
add_executable(107 107.cpp)
add_executable(thisDemo thisDemo.cpp)
add_executable(friend1 friend1.cpp)
add_executable(friend2 friend2.cpp)
add_executable(chongzai chongzai.cpp)
add_executable(zuoyichongzai zuoyichongzai.cpp)
add_executable(ZuoyiC ZuoyiC.cpp)
add_executable(zizengChongzai zizengChongzai.cpp)
add_executable(qianzhi qianzhi.cpp)
add_executable(fuzhichongzai fuzhichongzai.cpp)
add_executable(guanxichongzai guanxichongzai.cpp)
add_executable(fanghanshu fanghanshu.cpp)
add_executable(wuliaoxiequick wuliaoxiequick.cpp)
add_executable(malloctest malloctest.cpp)
add_executable(erjizhizhen erjizhizhen.cpp)

add_executable(shijian shijian.cpp)
add_executable(shijian2 shijian2.cpp)
add_executable(linxing linxing.cpp)
add_executable(duotai1 duotai/duotai1.cpp)
add_executable(xuhanshu xuhanshu.cpp)

add_executable(drink duotai/drink.cpp)
add_executable(Jichengxigou duotai/Jichengxigou.cpp)
add_executable(xuxigou duotai/xuxigou.cpp)
add_executable(diannao diannao.cpp)
add_executable(test manager/test.cpp)
add_executable(main manager/main.cpp)
add_executable(singleWorker singleWorker.cpp)